--- a/index.html
+++ b/index.html
@@ -1049,5 +1049,244 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer_column">
+            <a
+              href="/"
+              class="logotype logotype__flex wow animate__animated animate__fadeIn"
+              data-wow-duration="2s"
+            >
+              <img
+                src="images/logotype.svg"
+                alt="logotype"
+                class="image logotype__image"
+              />
+              <div class="logotype__text">
+                <div class="logotype__label">Street<span>Bike</span></div>
+                <div class="logotype__description">
+                  Мотошкола в Ростове-на-Дону
+                </div>
+              </div>
+            </a>
+            <ul class="footer_menu contacts_menu">
+              <li>
+                <a href="#">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M9.50289 4.25722L8.57441 4.62861V4.62861L9.50289 4.25722ZM10.5572 6.89288L11.4856 6.52149V6.52149L10.5572 6.89288ZM10.2366 8.91603L11.0049 9.55621V9.55621L10.2366 8.91603ZM9.66925 9.5969L10.4375 10.2371L9.66925 9.5969ZM9.79148 12.2915L9.08437 12.9986L9.79148 12.2915ZM11.7085 14.2085L12.4156 13.5014L11.7085 14.2085ZM14.4031 14.3307L13.7629 13.5625L14.4031 14.3307ZM15.084 13.7634L15.7242 14.5316L15.7242 14.5316L15.084 13.7634ZM17.1071 13.4428L16.7357 14.3713L17.1071 13.4428ZM19.7428 14.4971L20.1142 13.5686L19.7428 14.4971ZM4.89474 4H7.64593V2H4.89474V4ZM8.57441 4.62861L9.62867 7.26427L11.4856 6.52149L10.4314 3.88583L8.57441 4.62861ZM9.46842 8.27585L8.90103 8.95672L10.4375 10.2371L11.0049 9.55621L9.46842 8.27585ZM9.08437 12.9986L11.0014 14.9156L12.4156 13.5014L10.4986 11.5844L9.08437 12.9986ZM15.0433 15.099L15.7242 14.5316L14.4438 12.9951L13.7629 13.5625L15.0433 15.099ZM16.7357 14.3713L19.3714 15.4256L20.1142 13.5686L17.4785 12.5144L16.7357 14.3713ZM20 16.3541V19.1053H22V16.3541H20ZM19.1053 20C10.7629 20 4 13.2371 4 4.89474H2C2 14.3417 9.65829 22 19.1053 22V20ZM20 19.1053C20 19.5994 19.5994 20 19.1053 20V22C20.704 22 22 20.704 22 19.1053H20ZM19.3714 15.4256C19.751 15.5775 20 15.9452 20 16.3541H22C22 15.1274 21.2531 14.0242 20.1142 13.5686L19.3714 15.4256ZM15.7242 14.5316C16.0063 14.2964 16.3947 14.2349 16.7357 14.3713L17.4785 12.5144C16.4554 12.1051 15.2903 12.2897 14.4438 12.9951L15.7242 14.5316ZM11.0014 14.9156C12.0986 16.0128 13.8513 16.0923 15.0433 15.099L13.7629 13.5625C13.3656 13.8936 12.7813 13.8671 12.4156 13.5014L11.0014 14.9156ZM8.90103 8.95672C7.90771 10.1487 7.98722 11.9014 9.08437 12.9986L10.4986 11.5844C10.1329 11.2187 10.1064 10.6344 10.4375 10.2371L8.90103 8.95672ZM9.62867 7.26427C9.76509 7.6053 9.70356 7.99367 9.46842 8.27585L11.0049 9.55621C11.7103 8.7097 11.8949 7.54459 11.4856 6.52149L9.62867 7.26427ZM7.64593 4C8.05484 4 8.42255 4.24895 8.57441 4.62861L10.4314 3.88583C9.97577 2.74685 8.87265 2 7.64593 2V4ZM4.89474 2C3.29602 2 2 3.29602 2 4.89474H4C4 4.40059 4.40059 4 4.89474 4V2Z"
+                      fill="url(#paint0_linear_156_362)"
+                    />
+                    <defs>
+                      <linearGradient
+                        id="paint0_linear_156_362"
+                        x1="18.46"
+                        y1="19.8"
+                        x2="4.5"
+                        y2="4.26"
+                        gradientUnits="userSpaceOnUse"
+                      >
+                        <stop stop-color="#68B551" />
+                        <stop offset="1" stop-color="#3AB177" />
+                      </linearGradient>
+                    </defs>
+                  </svg>
+                  <span>8 (800) 200-06-00</span>
+                </a>
+              </li>
+              <li class="email">
+                <a href="#">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M20 5H4C3.44772 5 3 5.44772 3 6V18C3 18.5523 3.44772 19 4 19H20C20.5523 19 21 18.5523 21 18V6C21 5.44772 20.5523 5 20 5Z"
+                      stroke="url(#paint0_linear_156_356)"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M3 6L12.2571 13L21 6"
+                      stroke="url(#paint1_linear_156_356)"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <defs>
+                      <linearGradient
+                        id="paint0_linear_156_356"
+                        x1="18.46"
+                        y1="18.0667"
+                        x2="8.20591"
+                        y2="3.39069"
+                        gradientUnits="userSpaceOnUse"
+                      >
+                        <stop stop-color="#68B551" />
+                        <stop offset="1" stop-color="#3AB177" />
+                      </linearGradient>
+                      <linearGradient
+                        id="paint1_linear_156_356"
+                        x1="18.46"
+                        y1="12.5333"
+                        x2="15.06"
+                        y2="2.80088"
+                        gradientUnits="userSpaceOnUse"
+                      >
+                        <stop stop-color="#68B551" />
+                        <stop offset="1" stop-color="#3AB177" />
+                      </linearGradient>
+                    </defs>
+                  </svg>
+                  <span>inbox@streetbike.ru</span>
+                </a>
+              </li>
+            </ul>
+            <div class="creator">
+              <div class="creator__logo">
+                <svg
+                  width="25"
+                  height="16"
+                  viewBox="0 0 25 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 7.90231C0 9.99787 0.830818 12.0076 2.30968 13.4894C3.78855 14.9712 5.79432 15.8036 7.88575 15.8036H13.0613V6.90983L9.62414 10.3538V12.3628H7.88575C6.70537 12.3628 5.57333 11.8929 4.73867 11.0566C3.90401 10.2203 3.43511 9.08607 3.43511 7.90336C3.43511 6.72065 3.90401 5.58638 4.73867 4.75008C5.57333 3.91377 6.70537 3.44394 7.88575 3.44394H9.62935L12.8853 0.180523L13.0613 0.00415039H7.88575C5.79486 0.00415023 3.78956 0.836176 2.31079 2.31728C0.832012 3.79838 0.000828513 5.8073 0 7.90231Z"
+                    fill="#23262B"
+                  />
+                  <path
+                    d="M17.3711 8.15907L17.0212 7.80841L17.1962 7.63308L17.3711 7.45775L24.8142 0H19.9563L13.9371 6.03112H13.936V9.56692H13.9537L13.936 9.58467L20.1417 15.8026H24.9996L17.3711 8.15907Z"
+                    fill="#23262B"
+                  />
+                </svg>
+              </div>
+              <div class="creator__label">
+                Создано в <a href="#">AGK Media</a>
+              </div>
+            </div>
+          </div>
+          <div class="footer_column menu_rows">
+            <div class="footer_row">
+              <span class="footer_title">Категории</span>
+              <ul class="footer_menu">
+                <li><a href="#">Обучение</a></li>
+                <li><a href="#">Галерея</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Блог / Статьи</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <span class="footer_title">Информация</span>
+              <ul class="footer_menu">
+                <li><a href="#">Персональные данные</a></li>
+                <li><a href="#">Форма договора</a></li>
+                <li><a href="#">Наша команда</a></li>
+                <li><a href="#">Политика</a></li>
+                <li><a href="#">О нас</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <span class="footer_title">Социальные сети</span>
+              <ul class="footer_menu social_menu">
+                <li>
+                  <a href="#">
+                    <svg
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <rect
+                        width="20"
+                        height="19.9219"
+                        rx="4"
+                        fill="url(#paint0_linear_156_334)"
+                      />
+                      <path
+                        d="M16.7261 12.9693C16.2894 12.4245 15.7755 11.9596 15.2893 11.4659C14.8506 11.0209 14.823 10.7627 15.1756 10.2491C15.5605 9.68855 15.9743 9.14948 16.3627 8.59144C16.7252 8.06992 17.0958 7.54982 17.2865 6.92539C17.4075 6.52812 17.3005 6.35265 16.9088 6.28309C16.8413 6.27092 16.7716 6.27028 16.7029 6.27028L14.379 6.26744C14.0928 6.26301 13.9346 6.3928 13.8333 6.65664C13.6967 7.01328 13.5558 7.3696 13.393 7.71375C13.0236 8.49406 12.6111 9.24828 12.0328 9.88694C11.9053 10.0278 11.7642 10.2058 11.5511 10.1324C11.2845 10.0313 11.2059 9.57441 11.2103 9.41996L11.2081 6.63024C11.1564 6.23171 11.0714 6.05402 10.691 5.97656L8.27698 5.97704C7.95475 5.97704 7.79318 6.10651 7.62112 6.31613C7.52187 6.43722 7.49192 6.51579 7.6959 6.55594C8.09656 6.63498 8.32228 6.90468 8.38216 7.32249C8.47822 7.99009 8.47153 8.66036 8.41621 9.33064C8.39994 9.52635 8.36757 9.72159 8.29294 9.90433C8.17621 10.1916 7.98773 10.2501 7.74013 10.0733C7.51594 9.91334 7.35847 9.6876 7.20435 9.4609C6.6254 8.61009 6.16348 7.69257 5.78684 6.72841C5.67801 6.44987 5.49029 6.28103 5.20652 6.27645C4.50932 6.26491 3.81196 6.26301 3.11476 6.27708C2.69525 6.2853 2.57016 6.49713 2.741 6.89266C3.50037 8.64946 4.34562 10.3574 5.44895 11.9133C6.01544 12.7118 6.66583 13.4167 7.50606 13.9162C8.45831 14.4825 9.48337 14.6529 10.563 14.6004C11.0685 14.5757 11.2204 14.439 11.2438 13.9149C11.2596 13.5564 11.2987 13.1999 11.4687 12.8777C11.6356 12.5616 11.8884 12.5013 12.1798 12.698C12.3255 12.7965 12.4483 12.9218 12.5643 13.054C12.8489 13.3778 13.1232 13.7113 13.4185 14.0242C13.7889 14.4162 14.2278 14.6478 14.7795 14.6005L16.9153 14.601C17.2595 14.5776 17.4379 14.1388 17.2403 13.7393C17.1015 13.4595 16.9194 13.2104 16.7261 12.9693Z"
+                        fill="#23262B"
+                      />
+                      <defs>
+                        <linearGradient
+                          id="paint0_linear_156_334"
+                          x1="17.1778"
+                          y1="18.5938"
+                          x2="1.73379"
+                          y2="1.33447"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#68B551" />
+                          <stop offset="1" stop-color="#3AB177" />
+                        </linearGradient>
+                      </defs>
+                    </svg>
+                    <span>ВКонтакте</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg
+                      width="20"
+                      height="21"
+                      viewBox="0 0 20 21"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.30459 2.30527C-0.262557 3.92672 0.0581852 5.64915 0.0581852 10.8818C0.0581852 15.2272 -0.702955 19.5834 3.28057 20.6089C4.52448 20.9276 15.5461 20.9276 16.7883 20.6073C18.4469 20.181 19.7963 18.841 19.9808 16.5044C20.0065 16.1783 20.0065 5.59122 19.98 5.25848C19.7838 2.7696 18.2458 1.33521 16.2191 1.04469C15.7546 0.977642 15.6616 0.957777 13.2784 0.953639C4.82528 0.957777 2.97229 0.582832 1.30459 2.30527Z"
+                        fill="url(#paint0_linear_156_339)"
+                      />
+                      <path
+                        d="M10.0274 3.552C7.01027 3.552 4.14519 3.28465 3.05084 6.08227C2.59881 7.23773 2.66446 8.73834 2.66446 10.887C2.66446 12.7725 2.6038 14.5446 3.05084 15.691C4.1427 18.4902 7.03104 18.2221 10.0257 18.2221C12.9149 18.2221 15.8938 18.5217 17.0015 15.691C17.4543 14.5239 17.3879 13.0457 17.3879 10.887C17.3879 8.02156 17.5466 6.17166 16.1514 4.78278C14.7388 3.3757 12.8285 3.552 10.0241 3.552H10.0274ZM9.36764 4.87383C15.6612 4.8639 16.4622 4.16698 16.0201 13.8485C15.8631 17.2727 13.2456 16.8969 10.0282 16.8969C4.16181 16.8969 3.99313 16.7297 3.99313 10.8837C3.99313 4.96984 4.45846 4.87714 9.36764 4.87217V4.87383ZM13.9578 6.09137C13.47 6.09137 13.0745 6.48535 13.0745 6.97121C13.0745 7.45707 13.47 7.85105 13.9578 7.85105C14.4455 7.85105 14.841 7.45707 14.841 6.97121C14.841 6.48535 14.4455 6.09137 13.9578 6.09137ZM10.0274 7.12019C7.93926 7.12019 6.24664 8.80704 6.24664 10.887C6.24664 12.967 7.93926 14.6531 10.0274 14.6531C12.1156 14.6531 13.8074 12.967 13.8074 10.887C13.8074 8.80704 12.1156 7.12019 10.0274 7.12019ZM10.0274 8.44202C13.2722 8.44202 13.2764 13.332 10.0274 13.332C6.78342 13.332 6.77844 8.44202 10.0274 8.44202Z"
+                        fill="#23262B"
+                      />
+                      <defs>
+                        <linearGradient
+                          id="paint0_linear_156_339"
+                          x1="17.1778"
+                          y1="19.5193"
+                          x2="1.73043"
+                          y2="2.25962"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#68B551" />
+                          <stop offset="1" stop-color="#3AB177" />
+                        </linearGradient>
+                      </defs>
+                    </svg>
+                    <span>Instagram</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer_column">
+            <div class="footer_info">
+              <p>
+                Есть вопросы или предложения? <br />
+                Пожалуйста напишите нам!
+              </p>
+              <a href="#" class="btn">Написать нам</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">© 2022 “StreetBike”, все права защищены (с)</div>
+    </footer>
   </body>
 </html>
