--- a/index.html
+++ b/index.html
@@ -805,15 +805,15 @@
         </div>
         <h4
           class="title bike_sec__title title_lg wow animate__animated animate__fadeInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         ></h4>
         <p class="text bike_sec__description"></p>
         <div class="bike_sec__button">
           <a
             href="#"
             class="btn wow animate__animated animate__bounceIn"
-            data-wow-duration="1s"
-            data-wow-delay=".5s"
+            data-wow-duration=".7s"
+            data-wow-delay=".2s"
             >Записаться</a
           >
         </div>
@@ -822,9 +822,19 @@
 
     <section class="section services_sec">
       <div class="container">
-        <h2 class="section__title title title_xl">Услуги</h2>
+        <h2
+          class="section__title title title_xl wow animate__animated animate__slideInUp"
+          data-wow-duration="1s"
+        >
+          Услуги
+        </h2>
         <div class="services_items">
-          <a href="#" class="services_item" data-num="01">
+          <a
+            href="#"
+            class="services_item wow animate__animated animate__fadeInUp"
+            data-wow-duration="0.5s"
+            data-num="01"
+          >
             <div class="services_item__image">
               <img src="images/service_bike1.png" alt="bike" class="image" />
             </div>
@@ -836,7 +846,13 @@
               </div>
             </div>
           </a>
-          <a href="#" class="services_item" data-num="02">
+          <a
+            href="#"
+            class="services_item wow animate__animated animate__fadeInUp"
+            data-wow-duration="0.5s"
+            data-wow-delay="0.3"
+            data-num="02"
+          >
             <div class="services_item__image">
               <img src="images/service_bike2.png" alt="bike" class="image" />
             </div>
@@ -848,7 +864,13 @@
               </div>
             </div>
           </a>
-          <a href="#" class="services_item" data-num="03">
+          <a
+            href="#"
+            class="services_item wow animate__animated animate__fadeInUp"
+            data-wow-duration="0.5s"
+            data-wow-delay="0.5"
+            data-num="03"
+          >
             <div class="services_item__image">
               <img src="images/service_bike3.png" alt="bike" class="image" />
             </div>
@@ -866,7 +888,12 @@
 
     <section class="section protect_sec type_block pg_bt_big">
       <div class="container">
-        <h2 class="section__title title title_xl">Защита</h2>
+        <h2
+          class="section__title title title_xl wow animate__animated animate__slideInUp"
+          data-wow-duration="1s"
+        >
+          Защита
+        </h2>
         <div class="type_block__inner">
           <div class="type_block__content">
             <h2
@@ -892,7 +919,9 @@
               >Подробнее</a
             >
           </div>
-          <div class="type_block__image img_slider_wrap img_slider_wrap-right">
+          <div
+            class="type_block__image img_slider_wrap img_slider_wrap-right wow animate__animated animate__fadeIn"
+          >
             <div class="swiper img_slider">
               <div class="swiper-wrapper">
                 <div class="swiper-slide img_slider__slide">
@@ -932,7 +961,12 @@
 
     <section class="section type_block">
       <div class="container">
-        <h2 class="section__title title title_xl">Фотозона</h2>
+        <h2
+          class="section__title title title_xl wow animate__animated animate__slideInUp"
+          data-wow-duration="1s"
+        >
+          Фотозона
+        </h2>
         <div class="type_block__inner type_block__inner-reverse">
           <div class="type_block__content">
             <h2
@@ -958,7 +992,7 @@
               >Подробнее</a
             >
           </div>
-          <div class="type_block__image">
+          <div class="type_block__image wow animate__animated animate__fadeIn">
             <div class="circle">
               <img
                 src="images/girl.png"
@@ -973,7 +1007,12 @@
 
     <section class="section type_block">
       <div class="container">
-        <h2 class="section__title title title_xl">Прочее</h2>
+        <h2
+          class="section__title title title_xl wow animate__animated animate__slideInUp"
+          data-wow-duration="1s"
+        >
+          Прочее
+        </h2>
         <div class="type_block__inner type_block__single">
           <div class="type_block__content">
             <h2
@@ -999,14 +1038,14 @@
               >Подробнее</a
             >
           </div>
-          <div class="type_block__image">
+          <div class="type_block__image wow animate__animated animate__fadeIn">
             <img src="images/ud.png" alt="ud" class="image" />
           </div>
         </div>
       </div>
     </section>
 
-    <section class="sm_block intro_sec">
+    <section class="sm_block intro_sec wow animate__animated animate__fadeIn">
       <div class="container">
         <div class="type_block__inner">
           <div class="type_block__image">
@@ -1028,7 +1067,11 @@
       </div>
     </section>
 
-    <div class="request_block">
+    <div
+      class="request_block wow animate__animated animate__fadeInUp"
+      data-wow-duration=".5s"
+      data-wow-delay=".3s"
+    >
       <div class="container">
         <div class="request_block__wrapper">
           <div class="request_block__content">
@@ -1054,11 +1097,7 @@
       <div class="container">
         <div class="footer__inner">
           <div class="footer_column">
-            <a
-              href="/"
-              class="logotype logotype__flex wow animate__animated animate__fadeIn"
-              data-wow-duration="2s"
-            >
+            <a href="/" class="logotype logotype__flex">
               <img
                 src="images/logotype.svg"
                 alt="logotype"
