--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <link rel="stylesheet" href="libs/wow/animate.min.css" />
     <link rel="stylesheet" href="libs/hamburgers/hamburgers.min.css" />
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
 
     <script src="libs/wow/wow.min.js" defer></script>
+    <script src="libs/micromodal/micromodal.min.js" defer></script>
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
     <script src="js/common.js" defer></script>
   </head>
@@ -696,14 +698,14 @@
           <div class="type_block__content">
             <h2
               class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration="1s"
+              data-wow-duration=".5s"
             >
               <span>Мотошкола "STREET BIKE"</span> в Ростове-на-Дону
             </h2>
             <div
               class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
+              data-wow-duration=".5s"
+              data-wow-delay=".2s"
             >
               Обучение вождению мотоцикла с приобретением всем необходимых
               навыков безопасного вождения с положительными эмоциями!
@@ -711,23 +713,23 @@
             <a
               href="#"
               class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration="1s"
-              data-wow-delay=".6s"
+              data-wow-duration=".5s"
+              data-wow-delay=".3s"
               >Узнать стоимость</a
             >
           </div>
           <div class="type_block__image">
             <div
               class="circle wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
+              data-wow-duration=".5s"
               data-wow-delay=".3s"
             >
               <img
                 src="images/moto.png"
                 alt="moto"
                 class="type_block__image-abs wow animate__animated animate__bounceIn"
-                data-wow-duration="1.4s"
-                data-wow-delay=".5s"
+                data-wow-duration="1s"
+                data-wow-delay=".3s"
               />
             </div>
           </div>
@@ -739,13 +741,14 @@
       <div class="container">
         <h2
           class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         >
           Мотопарк
         </h2>
         <div
-          class="swiper bike_carousel wow animate__animated animate__fadeIn"
-          data-wow-duration="1s"
+          class="swiper bike_carousel wow animate__animated animate__fadeInUp"
+          data-wow-duration=".3s"
+          data-wow-delay=".1s"
         >
           <div class="swiper-wrapper">
             <div
@@ -812,7 +815,7 @@
           <a
             href="#"
             class="btn wow animate__animated animate__bounceIn"
-            data-wow-duration=".7s"
+            data-wow-duration=".5s"
             data-wow-delay=".2s"
             >Записаться</a
           >
@@ -824,7 +827,7 @@
       <div class="container">
         <h2
           class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         >
           Услуги
         </h2>
@@ -832,7 +835,7 @@
           <a
             href="#"
             class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.5s"
+            data-wow-duration="0.3s"
             data-num="01"
           >
             <div class="services_item__image">
@@ -849,8 +852,8 @@
           <a
             href="#"
             class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.5s"
-            data-wow-delay="0.3"
+            data-wow-duration="0.3s"
+            data-wow-delay="0.2"
             data-num="02"
           >
             <div class="services_item__image">
@@ -867,8 +870,8 @@
           <a
             href="#"
             class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.5s"
-            data-wow-delay="0.5"
+            data-wow-duration="0.3s"
+            data-wow-delay="0.4"
             data-num="03"
           >
             <div class="services_item__image">
@@ -890,7 +893,7 @@
       <div class="container">
         <h2
           class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         >
           Защита
         </h2>
@@ -898,14 +901,14 @@
           <div class="type_block__content">
             <h2
               class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration="1s"
+              data-wow-duration=".5s"
             >
               <span>Безопасное</span> обучение
             </h2>
             <div
               class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
+              data-wow-duration=".5s"
+              data-wow-delay=".2s"
             >
               На каждое занятии, наши ученики получают полный комплект
               экипировки и мотоцикл, а процесс обучения происходит под полным
@@ -914,13 +917,15 @@
             <a
               href="#"
               class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration="1s"
-              data-wow-delay=".6s"
+              data-wow-duration=".5s"
+              data-wow-delay=".3s"
               >Подробнее</a
             >
           </div>
           <div
             class="type_block__image img_slider_wrap img_slider_wrap-right wow animate__animated animate__fadeIn"
+            data-wow-duration=".5s"
+            data-wow-delay=".4s"
           >
             <div class="swiper img_slider">
               <div class="swiper-wrapper">
@@ -963,7 +968,7 @@
       <div class="container">
         <h2
           class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         >
           Фотозона
         </h2>
@@ -971,14 +976,14 @@
           <div class="type_block__content">
             <h2
               class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration="1s"
+              data-wow-duration=".5s"
             >
               Создай <span>свой образ</span>
             </h2>
             <div
               class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
+              data-wow-duration=".5s"
+              data-wow-delay=".2s"
             >
               Так же наша школа предоставляет технику и экипировку для
               проведения фотосессий. Вы можете выбрать любой мотоцикл из нашего
@@ -987,12 +992,16 @@
             <a
               href="#"
               class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration="1s"
-              data-wow-delay=".6s"
+              data-wow-duration=".5s"
+              data-wow-delay=".3s"
               >Подробнее</a
             >
           </div>
-          <div class="type_block__image wow animate__animated animate__fadeIn">
+          <div
+            class="type_block__image wow animate__animated animate__fadeIn"
+            data-wow-duration=".5s"
+            data-wow-delay=".3s"
+          >
             <div class="circle">
               <img
                 src="images/girl.png"
@@ -1009,7 +1018,7 @@
       <div class="container">
         <h2
           class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration="1s"
+          data-wow-duration=".5s"
         >
           Прочее
         </h2>
@@ -1017,14 +1026,14 @@
           <div class="type_block__content">
             <h2
               class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration="1s"
+              data-wow-duration=".5s"
             >
               <span>Подготовка</span> документов
             </h2>
             <div
               class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
+              data-wow-duration=".5s"
+              data-wow-delay=".2s"
             >
               После окончания курса мы подготавливаем полный пакет документов на
               категорию "А" для дальнейшей сдачи экзамена в МРЭО и получения
@@ -1033,12 +1042,16 @@
             <a
               href="#"
               class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration="1s"
-              data-wow-delay=".6s"
+              data-wow-duration=".5s"
+              data-wow-delay=".3s"
               >Подробнее</a
             >
           </div>
-          <div class="type_block__image wow animate__animated animate__fadeIn">
+          <div
+            class="type_block__image wow animate__animated animate__fadeIn"
+            data-wow-duration=".5s"
+            data-wow-delay=".3s"
+          >
             <img src="images/ud.png" alt="ud" class="image" />
           </div>
         </div>
@@ -1082,7 +1095,12 @@
               Оставьте заявку на бесплатную консультацию. Мы перезвоним Вам в
               течение 15 минут!
             </div>
-            <a href="#" class="btn btn_dark">Получить консультацию</a>
+            <a
+              href="javascript:;"
+              class="btn btn_dark popup_btn"
+              data-micromodal-trigger="popopForm"
+              >Получить консультацию</a
+            >
             <img
               src="images/form_bike.png"
               alt="form"
@@ -1327,5 +1345,65 @@
       </div>
       <div class="copyright">© 2022 “StreetBike”, все права защищены (с)</div>
     </footer>
+
+    <!-- POPUP -->
+    <div class="modal micromodal-slide" id="popopForm" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div
+          class="modal__container"
+          role="dialog"
+          aria-modal="true"
+          aria-labelledby="modal-1-title"
+        >
+          <button
+            class="modal__close"
+            aria-label="Close modal"
+            data-micromodal-close
+          ></button>
+          <div class="modal__content">
+            <form class="form">
+              <h2 class="form__title title title_md">Оставьте заявку</h2>
+              <div class="form__description">
+                Если вам нужна помощь и персональная консультация, просто
+                оставьте заявку и мы перезвоним вам в течение 15 минут!
+              </div>
+              <div class="form_group">
+                <input
+                  type="text"
+                  placeholder="Ваше имя"
+                  class="form_input"
+                  autocomplete="off"
+                />
+                <input
+                  type="text"
+                  placeholder="Ваш номер телефона"
+                  class="form_input"
+                  autocomplete="off"
+                />
+                <input
+                  type="text"
+                  placeholder="Желаемое время звонка"
+                  class="form_input"
+                  autocomplete="off"
+                />
+                <button class="btn btn_dark form_submit">
+                  Получить консультацию
+                </button>
+                <p class="form_note">
+                  Нажимая кнопку «Получить консультацию»», Вы даете согласие на
+                  <a href="#">обработку персональных данных</a> и принимаете
+                  <a href="#">политику конфиденциальности.</a>
+                </p>
+              </div>
+            </form>
+            <img
+              src="images/form_bike.png"
+              alt="bike"
+              class="modal__image image"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
