--- a/404.html
+++ b/404.html
@@ -692,319 +692,23 @@
     </header>
     <!-- HEADER END -->
 
-    <section class="section intro_sec type_block pg_bt_big">
+    <section class="section type_block not_found pg_bt_big">
       <div class="container">
-        <div class="type_block__inner">
-          <div class="type_block__content">
-            <h2
-              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration=".5s"
-            >
-              <span>Мотошкола "STREET BIKE"</span> в Ростове-на-Дону
-            </h2>
-            <div
-              class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".2s"
-            >
-              Обучение вождению мотоцикла с приобретением всем необходимых
-              навыков безопасного вождения с положительными эмоциями!
-            </div>
-            <a
-              href="#"
-              class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".3s"
-              >Узнать стоимость</a
-            >
-          </div>
-          <div class="type_block__image">
-            <div
-              class="circle wow animate__animated animate__fadeIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".3s"
-            >
-              <img
-                src="images/moto.png"
-                alt="moto"
-                class="type_block__image-abs wow animate__animated animate__bounceIn"
-                data-wow-duration="1s"
-                data-wow-delay=".3s"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section bike_sec">
-      <div class="container">
-        <h2
-          class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration=".5s"
-        >
-          Мотопарк
-        </h2>
-        <div
-          class="swiper bike_carousel wow animate__animated animate__fadeInUp"
-          data-wow-duration=".3s"
-          data-wow-delay=".1s"
-        >
-          <div class="swiper-wrapper">
-            <div
-              class="swiper-slide bike_carousel__slide"
-              data-slide-title="BSE 190"
-              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому и зачем подойдёт именно этот мотоцикл, коротко, ясно, простым языком, чтобы клиент понимал зачем."
-            >
-              <div class="circle">
-                <img
-                  src="images/bike2.png"
-                  alt="bike"
-                  class="bike_carousel__image"
-                />
-              </div>
-            </div>
-            <div
-              class="swiper-slide bike_carousel__slide"
-              data-slide-title="YAMAHA XJ6"
-              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому и зачем подойдёт именно этот мотоцикл, коротко, ясно, простым языком, чтобы клиент понимал зачем."
-            >
-              <div class="circle">
-                <img
-                  src="images/bike1.png"
-                  alt="bike"
-                  class="bike_carousel__image"
-                />
-              </div>
-            </div>
-            <div
-              class="swiper-slide bike_carousel__slide"
-              data-slide-title="SYM XS 125"
-              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому и зачем подойдёт именно этот мотоцикл, коротко, ясно, простым языком, чтобы клиент понимал зачем."
-            >
-              <div class="circle">
-                <img
-                  src="images/bike3.png"
-                  alt="bike"
-                  class="bike_carousel__image"
-                />
-              </div>
-            </div>
-            <div
-              class="swiper-slide bike_carousel__slide"
-              data-slide-title="HONDA CB 125"
-              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому."
-            >
-              <div class="circle">
-                <img
-                  src="images/bike4.png"
-                  alt="bike"
-                  class="bike_carousel__image"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-        <h4
-          class="title bike_sec__title title_lg wow animate__animated animate__fadeInUp"
-          data-wow-duration=".5s"
-        ></h4>
-        <p class="text bike_sec__description"></p>
-        <div class="bike_sec__button">
-          <a
-            href="#"
-            class="btn wow animate__animated animate__bounceIn"
-            data-wow-duration=".5s"
-            data-wow-delay=".2s"
-            >Записаться</a
-          >
-        </div>
-      </div>
-    </section>
-
-    <section class="section services_sec">
-      <div class="container">
-        <h2
-          class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration=".5s"
-        >
-          Услуги
-        </h2>
-        <div class="services_items">
-          <a
-            href="#"
-            class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.3s"
-            data-num="01"
-          >
-            <div class="services_item__image">
-              <img src="images/service_bike1.png" alt="bike" class="image" />
-            </div>
-            <div class="services_item__content">
-              <h4 class="services_item__title title_md">Мотокурс “БАЗОВЫЙ”</h4>
-              <div class="services_item__description text">
-                Короткое описание курса. Для кого, зачем, какие преимущества и
-                результаты получит обучающийся.
-              </div>
-            </div>
-          </a>
-          <a
-            href="#"
-            class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.3s"
-            data-wow-delay="0.2"
-            data-num="02"
-          >
-            <div class="services_item__image">
-              <img src="images/service_bike2.png" alt="bike" class="image" />
-            </div>
-            <div class="services_item__content">
-              <h4 class="services_item__title title_md">Мотокурс “ПРОФИ”</h4>
-              <div class="services_item__description text">
-                Короткое описание курса. Для кого, зачем, какие преимущества и
-                результаты получит обучающийся.
-              </div>
-            </div>
-          </a>
-          <a
-            href="#"
-            class="services_item wow animate__animated animate__fadeInUp"
-            data-wow-duration="0.3s"
-            data-wow-delay="0.4"
-            data-num="03"
-          >
-            <div class="services_item__image">
-              <img src="images/service_bike3.png" alt="bike" class="image" />
-            </div>
-            <div class="services_item__content">
-              <h4 class="services_item__title title_md">“МОТОДЖИМХАНА”</h4>
-              <div class="services_item__description text">
-                Короткое описание курса. Для кого, зачем, какие преимущества и
-                результаты получит обучающийся.
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section protect_sec type_block pg_bt_big">
-      <div class="container">
-        <h2
-          class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration=".5s"
-        >
-          Защита
-        </h2>
-        <div class="type_block__inner">
-          <div class="type_block__content">
-            <h2
-              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration=".5s"
-            >
-              <span>Безопасное</span> обучение
-            </h2>
-            <div
-              class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".2s"
-            >
-              На каждое занятии, наши ученики получают полный комплект
-              экипировки и мотоцикл, а процесс обучения происходит под полным
-              контролем грамотного инструктора.
-            </div>
-            <a
-              href="#"
-              class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".3s"
-              >Подробнее</a
-            >
-          </div>
-          <div
-            class="type_block__image img_slider_wrap img_slider_wrap-right wow animate__animated animate__fadeIn"
-            data-wow-duration=".5s"
-            data-wow-delay=".4s"
-          >
-            <div class="swiper img_slider">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide img_slider__slide">
-                  <div class="circle">
-                    <img
-                      src="images/shlem.png"
-                      alt="moto"
-                      class="type_block__image-abs"
-                    />
-                  </div>
-                </div>
-                <div class="swiper-slide img_slider__slide">
-                  <div class="circle">
-                    <img
-                      src="images/cerepaxa.png"
-                      alt="moto"
-                      class="type_block__image-abs"
-                    />
-                  </div>
-                </div>
-                <div class="swiper-slide img_slider__slide">
-                  <div class="circle">
-                    <img
-                      src="images/perchatki.png"
-                      alt="moto"
-                      class="type_block__image-abs"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section type_block">
-      <div class="container">
-        <h2
-          class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration=".5s"
-        >
-          Фотозона
-        </h2>
         <div class="type_block__inner type_block__inner-reverse">
           <div class="type_block__content">
-            <h2
-              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration=".5s"
-            >
-              Создай <span>свой образ</span>
+            <span class="imr">404</span>
+            <h2 class="type_block__title title title_md">
+              Страница не существует
             </h2>
-            <div
-              class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".2s"
-            >
-              Так же наша школа предоставляет технику и экипировку для
-              проведения фотосессий. Вы можете выбрать любой мотоцикл из нашего
-              парка и получить впечатляющие фотографии в нужном образе!
+            <div class="type_block__description text">
+              На карте нашего сайта нет такой страинцы, но есть много других!
             </div>
-            <a
-              href="#"
-              class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".3s"
-              >Подробнее</a
-            >
+            <a href="/" class="type_block__btn btn">Вернуться на главную</a>
           </div>
-          <div
-            class="type_block__image wow animate__animated animate__fadeIn"
-            data-wow-duration=".5s"
-            data-wow-delay=".3s"
-          >
+          <div class="type_block__image">
             <div class="circle">
               <img
-                src="images/girl.png"
+                src="images/404.png"
                 alt="moto"
                 class="type_block__image-abs"
               />
@@ -1013,103 +717,7 @@
         </div>
       </div>
     </section>
-
-    <section class="section type_block">
-      <div class="container">
-        <h2
-          class="section__title title title_xl wow animate__animated animate__slideInUp"
-          data-wow-duration=".5s"
-        >
-          Прочее
-        </h2>
-        <div class="type_block__inner type_block__single">
-          <div class="type_block__content">
-            <h2
-              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
-              data-wow-duration=".5s"
-            >
-              <span>Подготовка</span> документов
-            </h2>
-            <div
-              class="type_block__description text wow animate__animated animate__fadeIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".2s"
-            >
-              После окончания курса мы подготавливаем полный пакет документов на
-              категорию "А" для дальнейшей сдачи экзамена в МРЭО и получения
-              водительского удостоверения.
-            </div>
-            <a
-              href="#"
-              class="type_block__btn btn wow animate__animated animate__bounceIn"
-              data-wow-duration=".5s"
-              data-wow-delay=".3s"
-              >Подробнее</a
-            >
-          </div>
-          <div
-            class="type_block__image wow animate__animated animate__fadeIn"
-            data-wow-duration=".5s"
-            data-wow-delay=".3s"
-          >
-            <img src="images/ud.png" alt="ud" class="image" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="sm_block intro_sec wow animate__animated animate__fadeIn">
-      <div class="container">
-        <div class="type_block__inner">
-          <div class="type_block__image">
-            <div
-              class="circle wow animate__animated animate__fadeIn"
-              data-wow-duration="1s"
-              data-wow-delay=".3s"
-            >
-              <img
-                src="images/form_bike.png"
-                alt="moto"
-                class="type_block__image-abs wow animate__animated animate__bounceIn"
-                data-wow-duration="1.4s"
-                data-wow-delay=".5s"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div
-      class="request_block wow animate__animated animate__fadeIn"
-      data-wow-duration=".5s"
-      data-wow-delay=".3s"
-    >
-      <div class="container">
-        <div class="request_block__wrapper">
-          <div class="request_block__content">
-            <h2 class="request_block__title title title_md">
-              Остались вопросы?
-            </h2>
-            <div class="request_block__description text">
-              Оставьте заявку на бесплатную консультацию. Мы перезвоним Вам в
-              течение 15 минут!
-            </div>
-            <a
-              href="javascript:;"
-              class="btn btn_dark popup_btn"
-              data-micromodal-trigger="popopForm"
-              >Получить консультацию</a
-            >
-            <img
-              src="images/form_bike.png"
-              alt="form"
-              class="request_block__image"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
+    <br />
 
     <footer class="footer">
       <div class="container">
